--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -68,6 +68,9 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm">
                   <li class="nav-item">
                       <a class="nav-link" href="#">Contact</a>
                   </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="/test-error" routerLinkActive="active">Errors</a>
+                  </li>
               </ul>
           </div>
           <div class="navbar align-self-center d-flex">
