--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container" style="margin-top: 30px;">
     <div class="row">
         <section class="col-md-3">
+            <ng-container *ngIf="brands && types" >
+
             <div id="filterbar" class="collapse show" style="">
                 <div class="box border-bottom">
                     <div class="box-label text-uppercase d-flex align-items-center">Brands 
@@ -72,7 +74,7 @@
                 </option>
             </select>
             
-            
+            </ng-container>
         </section>
         <section class="col-md-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
