--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -6,16 +6,22 @@
       cursor: pointer;
       transition: transform 0.25s cubic-bezier(0.7, 0.98, 0.86, 0.98), box-shadow 0.25s cubic-bezier(0.7, 0.98, 0.86, 0.98);
       background-color: #C0D8C0;
-      margin: 5px;
+      margin: 5px auto;
       padding: 10px;
       width: 90%;
-
+      
       &:hover {
         transform: scale(1.1);
         // box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
       }
+
+      span {
+        display: block;
+        text-align: center;
+      }
     }
   
+    
   }
 
   
