--- a/src/app/shop/product-item/product-item.component.scss
+++ b/src/app/shop/product-item/product-item.component.scss
@@ -1,38 +1,117 @@
-.btn-group {
-    width: 100%;
+// .btn-group {
+//     width: 100%;
+// }
+
+// .btn {
+//     width: 30%;
+//     height: 40px;
+// }
+
+// .image :hover {
+//     opacity: 1;
+//     & button {
+//         transform: none;
+//         opacity: 1;
+//     }
+// }
+
+// .hover-overlay {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     top: 0;
+//     left: 0;
+//     background: rgba(255,255,255,0.5);
+//     opacity: 0;
+//     transition: all 0.5s;
+
+//     & button {
+//         z-index: 1000;
+//         transition: all 0.5s;
+//     }
+//     & button:first-of-type {
+//         transform: translateX(-20px);
+//     }
+//     & button:last-of-type {
+//         transform: translateX(20px);
+//     }
+// }
+
+
+.card{
+    
+    // width:350px;
+    height:370px;
 }
 
-.btn {
-    width: 30%;
-    height: 40px;
+.image{
+    position:absolute;
+    right:12px;
+    top:10px;
 }
 
-.image :hover {
-    opacity: 1;
-    & button {
-        transform: none;
-        opacity: 1;
-    }
+.main-heading{
+    
+    font-size:40px;
+    color:red !important;
 }
 
-.hover-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(255,255,255,0.5);
-    opacity: 0;
-    transition: all 0.5s;
-
-    & button {
-        z-index: 1000;
-        transition: all 0.5s;
-    }
-    & button:first-of-type {
-        transform: translateX(-20px);
-    }
-    & button:last-of-type {
-        transform: translateX(20px);
-    }
+.ratings i{
+    
+    color:orange;
+    
 }
+
+.user-ratings h6{
+    margin-top:2px;
+}
+
+.colors{
+    display:flex;
+    margin-top:2px;
+}
+
+.colors span{
+    width:15px;
+    height:15px;
+    border-radius:50%;
+    cursor:pointer;
+    display:flex;
+    margin-right:6px;
+}
+
+.colors span:nth-child(1) {
+    
+    background-color:red;
+    
+}
+
+.colors span:nth-child(2) {
+    
+    background-color:blue;
+    
+}
+
+.colors span:nth-child(3) {
+    
+    background-color:yellow;
+    
+}
+
+.colors span:nth-child(4) {
+    
+    background-color:purple;
+    
+}
+
+.btn-danger{
+    
+    height:48px;
+    font-size:18px;
+}
+
+// @media (min-width: 768px) { 
+//     .card{
+//         width: 350px;
+//     }
+// }
