--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -58,7 +58,7 @@
           
           <p>A great option weather you are at office or at home. </p>
           
-          <button class="btn btn-danger">Add to cart</button>
+          <button (click)="addItemToBasket()" class="btn btn-danger">Add to cart</button>
       </div>  
     
 </div>
