--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -85,9 +85,11 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm">
               <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
                   <i class="fa fa-fw fa-search text-dark mr-2"></i>
               </a>
-              <a class="nav-icon position-relative text-decoration-none" href="#">
+              <a class="nav-icon position-relative text-decoration-none" routerLink="/basket">
                   <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                  <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                  <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark" *ngIf="(basket$ | async) as basket">
+                    {{basket.items.length}}
+                  </span>
               </a>
               <a class="nav-icon position-relative text-decoration-none" href="#">
                   <i class="fa fa-fw fa-user text-dark mr-3"></i>
