--- a/src/app/shop/product-details/product-details.component.html
+++ b/src/app/shop/product-details/product-details.component.html
@@ -8,10 +8,10 @@
             <p>{{product.description}}</p>
             <p>{{product.price | currency}}</p>
             <div class="d-flex justify-content-start align-items-center">
-                <i class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size:2em;"></i>
-                <span class="font-weight-bold" style="font-size: 1.5em;">2</span>
-                <i class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size:2em;"></i>
-                <div class="btn btn-outline-secondary btn-lg ml-4">Add to Cart</div>
+                <i (click)="decrementQuantity()" class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size:2em;"></i>
+                <span class="font-weight-bold" style="font-size: 1.5em;">{{quantity}}</span>
+                <i (click)="incrementQuantity()" class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size:2em;"></i>
+                <button (click)="addItemToBasket()" class="btn btn-outline-primary btn-lg ml-4">Add to Cart</button>
             </div>
         </div>
     </div>
