--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
-<p>checkout works!</p>
-=======
 <div class="container mt-5">
-    <h1>Identity</h1>
+    <div class="row">
+        Checkout staff
+    </div>
+    
 </div>
->>>>>>> 19c0e7c183190f4975859a374029deb054117ebc
