--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -3,7 +3,7 @@
         <p>there are no items</p>
     </div>
 
-    <div *ngIf="basket$ | async">
+    <!-- <div *ngIf="basket$ | async">
         <div class="pb-5">
             <div class="container">
                 <div class="row">
@@ -91,4 +91,49 @@
                 </div>
             </div>
         </div>
+    </div> -->
+    
+    <div *ngIf="basket$ | async">
+        <div class="py-5">
+    <div class="card">
+        <div class="row">
+            <div class="col-md-8 cart">
+                <div class="title">
+                    <div class="row">
+                        <div class="col"><h4><b>Shopping Cart</b></h4></div>
+                        <!-- <div class="col align-self-center text-right text-muted">{{basket$.id}} items</div> -->
+                    </div>
+                </div>    
+                <div *ngFor="let item of (basket$ | async).items" class="row border-top border-bottom">
+                    <div class="row main align-items-center">
+                        <div class="col-2"><img class="img-fluid" src="{{item.pictureUrl}}"></div>
+                        <div class="col">
+                            <div class="row text-muted">{{item.productName}}</div>
+                            <div class="row">{{item.type}}</div>
+                        </div>
+                        <div class="col">
+                            <a style="cursor:pointer;" (click)="decrementItemQuantity(item)">-</a>
+                            <a class="border">{{item.quantity}}</a>
+                            <a style="cursor:pointer;" (click)="incrementItemQuantity(item)">+</a>
+                        </div>
+                        <div class="col">{{item.price * item.quantity | currency}} 
+                            <span style="cursor:pointer;" (click)="removeBasketItem(item)" class="close">&#10005;</span>
+                        </div>
+                    </div>
+                </div>
+               
+                
+                <div class="back-to-shop"><a href="/shop">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
+            </div>
+            <div class="col-md-4 summary">
+                <div><h5><b>Summary</b></h5></div>
+                <hr>
+                <app-order-totals></app-order-totals>
+                        <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
+                            Processed it Checkout
+                        </a>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
