--- a/src/app/core/test-error/test-error.component.html
+++ b/src/app/core/test-error/test-error.component.html
@@ -11,137 +11,32 @@
 </div>
  -->
 
- <!-- <div class="height d-flex justify-content-center align-items-center"> -->
-<div class="container">
-    <div class="row">
-<div class="col-md-4">
-    <div class="card p-3">
-        
-        <div class="d-flex justify-content-between align-items-center ">
-            <div class="mt-2">
-                <h4 class="text-uppercase">Ikea</h4>
-                <div class="mt-5">
-                    <h5 class="text-uppercase mb-0">Blanda Matt</h5>
-                    <h1 class="main-heading mt-0">VASE</h1>
-                    <div class="d-flex flex-row user-ratings">
-                        <div class="ratings">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
+ <div class="container">
+     <div class="row">
+         <div class="col-md-4">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="py-3" style="width: 100%;">
+                    <div class="" style="box-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%); border-radius: 0.5rem;     background-color: #fff;">
+                        <div class="" style="background-image: url(https://images.unsplash.com/photo-1475855581690-80accde3ae2b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=750&amp;q=80);padding: 1rem;    height: 14rem;background-size: cover;background-position: center;">
+                            <div class="d-flex justify-content-end">
+                                <svg style="width: 1.5rem;color: #fff;fill: currentColor;height: 1.5rem; display: block;
+                                vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path d="M12.76 3.76a6 6 0 0 1 8.48 8.48l-8.53 8.54a1 1 0 0 1-1.42 0l-8.53-8.54a6 6 0 0 1 8.48-8.48l.76.75.76-.75zm7.07 7.07a4 4 0 1 0-5.66-5.66l-1.46 1.47a1 1 0 0 1-1.42 0L9.83 5.17a4 4 0 1 0-5.66 5.66L12 18.66l7.83-7.83z"></path>
+                                </svg>
+                            </div>
                         </div>
-                        <h6 class="text-muted ml-1">4/5</h6>
+                        <div style="padding: 1rem;">
+                            <p  style="margin:0; font-weight: 700; font-size: .875rem;text-transform: uppercase;color: #4a5568;">Detached house • 5y old</p>
+                            <p style="font-size: 1.875rem;color: #1a202c;    margin: 0;">$750,000</p>
+                            <p style="color: #4a5568; margin:0;">742 Evergreen Terrace</p>
+                        </div>
+                        
+                        
                     </div>
                 </div>
             </div>
-            <div class="image">
-                <img src="https://i.imgur.com/MGorDUi.png" width="200">
-            </div>
-        </div>
-        
-        <div class="d-flex justify-content-between align-items-center mt-2 mb-2">
-            <span>Available colors</span>
-            <div class="colors">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            
-        </div>
-        
-        
-        <p>A great option weather you are at office or at home. </p>
-        
-        <button class="btn btn-danger">Add to cart</button>
-    </div>
-</div>
-
-<div class="col-md-4">
-    <div class="card p-3">
-        
-        <div class="d-flex justify-content-between align-items-center ">
-            <div class="mt-2">
-                <h4 class="text-uppercase">Ikea</h4>
-                <div class="mt-5">
-                    <h5 class="text-uppercase mb-0">Blanda Matt</h5>
-                    <h1 class="main-heading mt-0">VASE</h1>
-                    <div class="d-flex flex-row user-ratings">
-                        <div class="ratings">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        </div>
-                        <h6 class="text-muted ml-1">4/5</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="image">
-                <img src="https://i.imgur.com/MGorDUi.png" width="200">
-            </div>
-        </div>
-        
-        <div class="d-flex justify-content-between align-items-center mt-2 mb-2">
-            <span>Available colors</span>
-            <div class="colors">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            
-        </div>
-        
-        
-        <p>A great option weather you are at office or at home. </p>
-        
-        <button class="btn btn-danger">Add to cart</button>
-    </div>
-</div>
-
-<div class="col-md-4">
-    <div class="card p-3">
-        
-        <div class="d-flex justify-content-between align-items-center ">
-            <div class="mt-2">
-                <h4 class="text-uppercase">Ikea</h4>
-                <div class="mt-5">
-                    <h5 class="text-uppercase mb-0">Blanda Matt</h5>
-                    <h1 class="main-heading mt-0">VASE</h1>
-                    <div class="d-flex flex-row user-ratings">
-                        <div class="ratings">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        </div>
-                        <h6 class="text-muted ml-1">4/5</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="image">
-                <img src="https://i.imgur.com/MGorDUi.png" width="200">
-            </div>
-        </div>
-        
-        <div class="d-flex justify-content-between align-items-center mt-2 mb-2">
-            <span>Available colors</span>
-            <div class="colors">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            
-        </div>
-        
-        
-        <p>A great option weather you are at office or at home. </p>
-        
-        <button class="btn btn-danger">Add to cart</button>
-    </div>
-</div>
-</div>
-</div>
-<!-- </div> -->
+         </div>
+         
+     </div>
+ </div>
+ 
