--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -80,3 +80,32 @@
   border-radius: 2px
 }
 
+
+.searchBox {
+  background: #dde5df;
+  /* height: 40px; */
+  border-radius: 40px;
+  padding-left: 12px;
+}
+
+
+.searchButton {
+  color: #d4efd5;
+  background: #1f7433;
+  transition: 0.4s;
+}
+
+.searchInput {
+  
+border: none;
+background: none;
+outline: none;
+transition: 0.4s;
+}
+
+@media screen and (max-width: 620px) {
+.searchBox:hover > .searchInput {
+  width: 150px;
+  padding: 0 6px;
+}
+}
