--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -78,9 +78,13 @@
      </li>
 
       <li class="dropdown cart-nav dropdown-slide list-inline-item">
-        <a href="#"  >
-          <i class="tf-ion-android-cart"></i>
-        </a>
+
+ <a class="nav-icon position-relative text-decoration-none" routerLink="/basket">
+  <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
+  <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark" *ngIf="(basket$ | async) as basket">
+    {{basket.items.length}}
+  </span>
+</a>
       </li>
         <!-- <div class="dropdown-menu cart-dropdown">
           <div class="media">
@@ -122,7 +126,7 @@
           </div>
         </div>
       </li> -->
-      <li class="list-inline-item"><a href="/profile-details"><i class="tf-ion-ios-person mr-3"></i></a></li>
+      <li class="list-inline-item"><a routerLink="/profile-details"><i class="tf-ion-ios-person mr-3"></i></a></li>
     </ul>
   </div>
 </nav>
