--- a/src/app/shop/product-details/product-details.component.html
+++ b/src/app/shop/product-details/product-details.component.html
@@ -54,8 +54,8 @@
 
           <form class="cart" action="#" method="post">
             <div class="quantity d-flex align-items-center">
-              <input type="number" id="#" class="input-text qty text form-control w-25 mr-3" step="1" min="1" max="9" name="quantity" value="1" title="Qty" size="4" >
-              <a href="#" class="btn btn-main btn-small">Add to cart</a>
+              <input type="number" id="#" class="input-text qty text form-control w-25 mr-3" [(ngModel)]="quantity" step="1" min="1" [max]="9"  name="quantity" value="1" title="Qty" size="3" >
+              <a (click)="addItemToBasket()" class="btn btn-main btn-small">Add to cart</a>
             </div>
           </form>
 
