--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -87,8 +87,10 @@
                     <input (keyup)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
+                    <button (click)="AddProduct()" class="btn btn-outline-success ml-2 my-2">Post</button>
                 </div>
             </div>
+           
 
             <div class="row">
                 <div class="col-md-4 mb-4" *ngFor="let item of products">
