--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,6 +1,21 @@
 <div class="container mt-5">
     <div class="row">
-        Checkout staff
+        <div class="col-8">
+            <app-stepper [linearModeSelected]="true" #appStepper>
+               <cdk-step [label]="'Address'">
+                   <app-checkout-address [checkoutForm]="checkoutForm"> </app-checkout-address>
+               </cdk-step>
+               <cdk-step [label]="'Delivery'">
+                <app-checkout-delivery [checkoutForm]="checkoutForm"></app-checkout-delivery>
+            </cdk-step>
+            <cdk-step [label]="'Review'">
+                <app-checkout-review></app-checkout-review>
+            </cdk-step>
+            <cdk-step [label]="'Payment'">
+                <app-checkout-payment></app-checkout-payment>
+            </cdk-step>
+            </app-stepper>
+        </div>
+      
     </div>
-    
 </div>
