--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -5,7 +5,7 @@
                 <h1 class="h3 mb-3 font-weight-normal">Register</h1>
             </div>
 
-            <app-text-input formControlName="displayName" [label]="'Display Name'"></app-text-input>
+            <app-text-input formControlName="userName" [label]="'user Name'"></app-text-input>
             <app-text-input formControlName="email" [label]="'Email address'"></app-text-input>
             <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
 
